(executable
 (enabled_if
  (= %{context_name} "solo5"))
 (name main)
 (modules main pate immuable)
 (link_flags :standard -cclib "-z solo5-abi=hvt")
 (libraries
  mkernel
  carton
  carton.cartonnage
  mnet
  art
  hxd.core
  hxd.string
  encore
  mhttp
  mirage-crypto-rng-mkernel
  cattery
  re
  gmp
  cachet
  vifu
  cmdliner
  immuable.tree
  logs.fmt
  logs.cli
  fmt.cli)
 (foreign_stubs
  (language c)
  (names manifest)))

(rule
 (targets manifest.c)
 (deps manifest.json)
 (enabled_if
  (= %{context_name} "solo5"))
 (action
  (run solo5-elftool gen-manifest manifest.json manifest.c)))
